fixed pre width on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,15 @@ pre {
     margin-bottom: 15px;
 }
 
+pre,
+code {
+    white-space: pre-wrap;       /* css-3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
 ul,
 ol {
     padding: 0 0 18px 30px;
@@ -315,8 +324,8 @@ img {
     }
     #page,
     #main-container,
-    #post-title,
-    #post,
+    .post-title,
+    .post,
     footer,
     header,
     main {
@@ -327,7 +336,6 @@ img {
     #social {
         text-align: center;
         margin-top: -20px;
-        /*border-bottom: 0.5px solid #666;*/
     }
     .intro {
         float: none;
